--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,11 +1,115 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    background-color: #f2f2f2;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    color: #555;
+    -webkit-font-smoothing: antialiased;
+    -webkit-overflow-scrolling: touch;
 }
-
-a {
-  color: #00B7FF;
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    color: #333;
 }
 h1 {
-  color: green;
+    font-size: 40px;
+}
+h3 {
+    color: #95a5a6;
+    font-weight: 400;
+}
+h4 {
+    color: #95a5a6;
+    font-weight: 400;
+    font-size: 20px;
+}
+p {
+    line-height: 28px;
+    margin-bottom: 25px;
+    font-size: 16px;
+}
+.centered {
+    text-align: center;
+}
+a {
+    color: #3498db;
+    word-wrap: break-word;
+    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+    transition: color 0.1s ease-in, background 0.1s ease-in;
+}
+a:hover,a:focus {
+    color: #7b7b7b;
+    text-decoration: none;
+    outline: 0;
+}
+a:before,a:after {
+    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+    transition: color 0.1s ease-in, background 0.1s ease-in;
+}
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+.navbar-default {
+    background-color: #3498db;
+    border-color: transparent;
+    .navbar-brand {
+        color: white;
+    }
+    .navbar-nav {
+        & > li {
+            & > a {
+                color: white;
+            }
+        }
+    }
+}
+.mt {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.form-control {
+    height: 42px;
+    font-size: 18px;
+    width: 280px;
+}
+i {
+    margin: 8px;
+    color: #3498db;
+}
+#headerwrap {
+    background-color: #3498db;
+    margin-top: -20px;
+    padding-top:200px;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 650px;
+    width: 100%;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    h1 {
+        margin-top: 60px;
+        margin-bottom: 15px;
+        color: white;
+        font-size: 45px;
+        font-weight: 300;
+        letter-spacing: 1px;
+    }
 }
