--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,7 +27,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='#')
+          a.navbar-brand(href='/')
             b Gravacoin
         .navbar-collapse.collapse
           ul.nav.navbar-nav.navbar-right
@@ -38,12 +38,13 @@ html
             li
               a(href='/#about') About
 
-    #headerwrap
-      block header
+    block header
 
     block content
 
     script(src='/jquery.min.js')
     script(src='/js/bootstrap.min.js')
+
+    script(src='/javascripts/main.js')
 
 
