--- a/views/index.jade
+++ b/views/index.jade
@@ -1,16 +1,17 @@
 extends layout
 
 block header
-  .container
-    .row
-      .col-lg-8
-        h1
-          | Bring your crypto addresses
-          br
-          | Everywere.
-        a.button.btn.btn-info.btn-lg(href='#how_it_works') How does it work?
-      .col-lg-4
-        img.img-responsive(src='/images/ipad-hand.png', alt='')
+  #headerwrap
+    .container
+      .row
+        .col-lg-8
+          h1
+            | Bring your crypto addresses
+            br
+            | Everywere.
+          a.button.btn.btn-info.btn-lg(href='#how_it_works') How does it work?
+        .col-lg-4
+          img.img-responsive(src='/images/ipad-hand.png', alt='')
 
 
 block content
