--- a/views/layout.jade
+++ b/views/layout.jade
@@ -44,6 +44,7 @@ html
 
     script(src='/jquery.min.js')
     script(src='/js/bootstrap.min.js')
+    script(src='/ZeroClipboard.min.js')
 
     script(src='/javascripts/main.js')
 
