--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html
     meta(name='description', content='')
     meta(name='author', content='Dimitri Jorge')
 
-    title= title
+    title Gravacoin
 
     link(rel='shortcut icon', href='/favicon.ico')
     link(rel='stylesheet', href='/css/bootstrap.css')
@@ -19,6 +19,10 @@ html
       script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
   body
+    script(src='/ZeroClipboard.min.js')
+    script(src='/angular.min.js')
+    script(src='/angular-resource.min.js')
+    script(src='/ng-clip.min.js')
 
     .navbar.navbar-default.navbar-fixed-top
       .container
@@ -43,8 +47,7 @@ html
     block content
 
     script(src='/jquery.min.js')
-    script(src='/js/bootstrap.min.js')
-    script(src='/ZeroClipboard.min.js')
+    //- script(src='/js/bootstrap.min.js')
 
     script(src='/javascripts/main.js')
 
