--- a/views/profile.jade
+++ b/views/profile.jade
@@ -21,7 +21,7 @@ block header
               {{it.currency.name}}
             td {{it.address}}
             td
-              button.btn.btn-info(class="copy-button pull-right", data-address="{{it.address}}", clip-copy="it.address", clip-click="handleClick(it.address)", title="Click to clipboard")
+              button.btn.btn-info(class="copy-button pull-right", data-currency="{{it.currency.symbol}}", clip-copy="it.address", clip-click="handleClick(it.currency.symbol)", title="Click to clipboard")
                 span.legend Copy to Clipboard
                 span.glyphicon.glyphicon-check.hidden
 
