--- a/views/index.jade
+++ b/views/index.jade
@@ -6,9 +6,9 @@ block header
       .row
         .col-lg-8
           h1
-            | Bring your crypto addresses
+            | Like gravatar
             br
-            | Everywere.
+            | For coins.
           a.button.btn.btn-info.btn-lg(href='#how_it_works') How does it work?
         .col-lg-4
           img.img-responsive(src='/images/ipad-hand.png', alt='')
@@ -23,8 +23,11 @@ block content
           br
           | No registration required.
         h3
-          | Because raw text in github readme's are so 2013.
+          | Because raw text addresses' are so 2013.
 
+    .row.mt.centered
+      .col-lg-8.col-lg-offset-2
+        iframe(src="/458641ed4b2725b16edbf0192ca0b2f2/ltc", width="100%", scrolling="no", frameborder="0", style="border:none; overflow:hidden; height:20px;", allowTransparency="true")
     .row.mt.centered
       .col-lg-4
         img(src='/images/ser01.png', width='180', alt='')
