Add buckler badges

--- a/views/index.jade
+++ b/views/index.jade
@@ -26,9 +26,6 @@ block content
           | Because raw text addresses' are so 2013.
 
     .row.mt.centered
-      .col-lg-8.col-lg-offset-2
-        iframe(src="/458641ed4b2725b16edbf0192ca0b2f2/ltc", width="100%", scrolling="no", frameborder="0", style="border:none; overflow:hidden; height:20px;", allowTransparency="true")
-    .row.mt.centered
       .col-lg-4
         img(src='/images/ser01.png', width='180', alt='')
         h4 1 - Register your address
@@ -45,8 +42,17 @@ block content
         p
           | Your newly registered address appears on your profile page
 
-    .row.mt.centered
-      h3 You can then embed you address anywhere using our widget !
+    .row.mt.centered.text-center
+      h3 You can then embed a badge pointing to your profile anywere !
+      .col-lg-1.col-lg-offset-4
+        a(href="/458641ed4b2725b16edbf0192ca0b2f2", title="See profile page", target="_blank")
+          img(src="/458641ed4b2725b16edbf0192ca0b2f2.png")
+      .col-lg-2
+        a(href="/458641ed4b2725b16edbf0192ca0b2f2", title="See profile page", target="_blank")
+          img(src="/ltc/458641ed4b2725b16edbf0192ca0b2f2.png")
+      .col-lg-1
+        a(href="/458641ed4b2725b16edbf0192ca0b2f2", title="See profile page", target="_blank")
+          img(src="/btc/458641ed4b2725b16edbf0192ca0b2f2.png")
 
   .container
     hr
