Remove /addresses/ namespace in many routes

--- a/views/index.jade
+++ b/views/index.jade
@@ -80,7 +80,7 @@ block content
 
         .well.well-lg
           code.col-md-6
-            | GET /api/:currency/addresses/:encrypted_email/validate/:token
+            | GET /api/:currency/:encrypted_email/validate/:token
           p.col-md-6 Where token is a code you should have received by email
           .clearfix &nbsp;
 
