--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,6 +23,8 @@ html
     script(src='/angular.min.js')
     script(src='/angular-resource.min.js')
     script(src='/ng-clip.min.js')
+    script(src='/jquery.min.js')
+    script(src='/js/bootstrap.min.js')
 
     .navbar.navbar-default.navbar-fixed-top
       .container
@@ -45,10 +47,5 @@ html
     block header
 
     block content
-
-    script(src='/jquery.min.js')
-    //- script(src='/js/bootstrap.min.js')
-
-    script(src='/javascripts/main.js')
 
 
