Add bio about me

--- a/views/index.jade
+++ b/views/index.jade
@@ -100,18 +100,25 @@ block content
         h1 About the author
       .row.mt
         .col-lg-4.col-lg-offset-4
-          img.img-circle(src='http://www.gravatar.com/avatar/458641ed4b2725b16edbf0192ca0b2f2', width='140', alt='')
-          h4 Dimitri Jorge
-          p.text-left.
-            Hi, I'm a developper currently living in Paris.
-            <br />I have built this tool because I was sick of seein raw addresses in Readme's or donation pages.
-            <br />What if you want to use another address? Or if I want to donate DOGEs to someone whom I only know the email.
-            <br />That's where I think <em>Gravacoin</em> can be an answer.
-            <br />That's my first NodeJS app so I would love to get feedbacks / contributions to the projects, feel free to contact me.
-          p
-            i.glyphicon.glyphicon-send
-            i.glyphicon.glyphicon-phone
-            i.glyphicon.glyphicon-globe
+          img.img-circle(src='http://www.gravatar.com/avatar/458641ed4b2725b16edbf0192ca0b2f2', width='140', alt='Me!')
+          .mt
+            h4 Dimitri Jorge
+            p.text-left.
+              Hi, I'm a developper currently living in Paris.
+              <br />I have built this tool because I was sick of seein raw addresses in Readme's or donation pages.
+              <br />What if you want to use another address? Or if I want to donate DOGEs to someone whom I only know the email.
+              <br />That's where I think <em>Gravacoin</em> can be an answer.
+              <br />That's my first real NodeJS app so I would love to get feedbacks / contributions to the projects, feel free to contact me.
+            ul.list-unstyled.list-inline
+              li
+                a(href="http://twitter.com/Dimitri_Jorge")
+                  img(src="/images/twitter-32.png", alt="Twitter")
+              li
+                a(href="http://github.com/jorge-d")
+                  img(src="/images/github-6-32.png", alt="Github")
+              li
+                a(href="http://linkedin.com/pub/dimitri-jorge/5b/919/4b7/")
+                  img(src="/images/linkedin-3-32.png", alt="Github")
 
   .container
     hr
