Fix issue and improve profile page with non-existing account handling

--- a/views/index.jade
+++ b/views/index.jade
@@ -34,7 +34,7 @@ block content
 
     .row.mt.centered.text-center
       h3 You can then embed a badge pointing to your profile anywere !
-      p With more options to come!
+      p With more options to come! (Like an embedable widget?)
       .mt
         .col-lg-4.col-lg-offset-1.col-md-4.col-xs-12
           a.text-right(href="/458641ed4b2725b16edbf0192ca0b2f2", target="_blank")
@@ -110,10 +110,10 @@ block content
           h4 Dimitri Jorge
           p.
             Hi, I'm a developper currently living in Paris.
-            <br />I have built this tool because I was sick of seein raw addresses in Readme's or donation pages.
-            <br />What if you want to use another address? Or if I want to donate DOGEs to someone whom I only know the email.
-            <br />That's where I think <em>Gravacoin</em> can be an answer.
-            <br />That's my first real NodeJS app so I would love to get feedbacks / contributions to the projects, feel free to contact me.
+            <br />I was looking for something to get people's DOGE address easily,
+            <br />You know, just like it's easy to get someone's picture using Gravatar.
+            <br />That's why I built <em>Gravacoin</em>.
+            <br />It's my first real NodeJS app so I would love to get feedbacks / contributions to the projects, feel free to contact me.
           ul.list-unstyled.list-inline
             li
               a(href="http://twitter.com/Dimitri_Jorge")
