--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block header
       .row(ng-controller="IndexCtrl")
         .col-lg-12
           h1
-            | Gravacoin is a free open-source <em>tool</em> to share your <br/>
+            | Gravacoin is a free open-source <em>service</em> to share your <br/>
             | <strong>{{currency}}</strong> addresse with the world.
       .row.mt
         a.button.btn.btn-success.btn-lg(href='#documentation') How does it work?
