--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html
     title Gravacoin
 
     link(rel='shortcut icon', href='/favicon.ico')
-    link(rel='stylesheet', href='/css/bootstrap.css')
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(href='http://fonts.googleapis.com/css?family=Lato:300,400,900', rel='stylesheet', type='text/css')
 
@@ -19,12 +19,12 @@ html
       script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
   body
-    script(src='/ZeroClipboard.min.js')
-    script(src='/angular.min.js')
-    script(src='/angular-resource.min.js')
-    script(src='/ng-clip.min.js')
-    script(src='/jquery.min.js')
-    script(src='/js/bootstrap.min.js')
+    script(src='/zeroclipboard/ZeroClipboard.min.js')
+    script(src='/angular/angular.min.js')
+    script(src='/angular/angular-resource.min.js')
+    script(src='/angular/ng-clip.min.js')
+    script(src='/jquery/jquery.min.js')
+    script(src='/bootstrap/js/bootstrap.min.js')
 
     .navbar.navbar-default.navbar-fixed-top
       .container
