--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block header
         .col-lg-12
           h1
             | Gravacoin is a free open-source <em>service</em> to share your <br/>
-            | <strong>{{currency}}</strong> addresse with the world.
+            | <strong>{{currency}}</strong> address with the world.
       .row.mt
         a.button.btn.btn-success.btn-lg(href='#documentation') How does it work?
 
