Fix markdown link

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -53,7 +53,7 @@ block header
                   img.margin-bottom-xs.center-block(ng-src="{{selectedCurrency}}/{{hash}}.png")
                   .input-group.input-group-sm
                     span.input-group-addon Markdown
-                    input.form-control(type="text", value="[![Donate](http://gravaco.in/{{selectedCurrency}}/{{hash}}.png)](http://gravaco.in/{{selectedCurrency}}/{{hash}})")
+                    input.form-control(type="text", value="[![Donate](http://gravaco.in/{{selectedCurrency}}/{{hash}}.png)](http://gravaco.in/{{hash}})")
                   .input-group.input-group-sm
                     span.input-group-addon Image URL
                     input.form-control(type="text", value="http://gravaco.in/{{selectedCurrency}}/{{hash}}.png")
