Add GAnalytics and try to improve html code quality

--- a/views/index.jade
+++ b/views/index.jade
@@ -75,13 +75,10 @@ block content
         h3 Validate this address
 
         .well.well-lg
-          code.col-md-6
-            | GET /api/:currency/:encrypted_email/validate/:token
-          p.col-md-6 Where token is a code you should have received by email
-          .clearfix &nbsp;
+          p Click on the link sent in the email or copy/paste it on your browser.
 
       .col-lg-12
-        h3 See your profile
+        h3 Visit your profile
 
         .well.well-lg
           code.col-md-6 http://www.gravaco.in/HASH
