Implement search profile function and add link to profile in profile page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -58,6 +58,8 @@ html
         .navbar-collapse.collapse
           ul.nav.navbar-nav.navbar-right
             li
+              a(href='/search') Search
+            li
               a(href='/#how_it_works') What is it
             li
               a(href='/#documentation') Documentation
